tdf#99524 - allow backward connect paragraph to undo.

When pressing backspace, two paragaphs connected. The first paragraph
get the style of the second paragraph. However the ParaAttribsChanged()
doesn't update Outliner's nDepth because it is not in undo. So it create
incorrect undo information when user press enter later.

And during undo, the nDepth isn't updated because there is a check
to compare the number of paragraphs, so SetParaAttribs needs to be
called after ParagraphInserted.

Change-Id: I6a860514042240035cde95d64bdd1f374e05a94e
Reviewed-on: https://gerrit.libreoffice.org/47226
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Mark Hung <marklh9@gmail.com>