editeng/source/editeng/impedit.hxx
@@ -543,7 +543,7 @@ private:
 
 
     void                CursorMoved( const ContentNode* pPrevNode );
-    void                ParaAttribsChanged( ContentNode const * pNode );
+    void                ParaAttribsChanged( ContentNode const * pNode, bool bIgnoreUndoCheck = false );
     void                TextModified();
     void                CalcHeight( ParaPortion* pPortion );
 
